CHANGELOG
=========

MyKnowledgeBase version 2.1 - april 2015
- several small adjustment in stylesheet
- removed support for document title in older WP versions
- files index and archive: pagination inside loop

MyKnowledgeBase version 2.0 - february 2015
- added Spanish translation (thanks Miquel)
- added German translation (thanks Frank)
- updated French translation (thanks Ollie)
- file style: adjusted styling comments area
- file style: added support in Chrome for Checkbox, Radio and Select
- file style and file custom-editor-style: finetuned img position in post and page
- file style: reordered mobile stylesheet
- file footer: added div around footer-widgets
- file functions: removed class excerpt because not used anymore
- file functions: added class to posts nav (now no empty space when posts nav is not present)

MyKnowledgeBase version 1.9 - december 2014
- file header: removed wp_title because of new title-tag
- file functions: added backwards compatibility for WP 4.0 and older
- reordered file nav

MyKnowledgeBase version 1.8 - december 2014 
- file functions: added title-tag
- updated the reset stylesheet
- adjusted styling of several tags
- reordered and cleaned up files style and custom-editor-style
- reordered php files

MyKnowledgeBase version 1.6 - december 2014 
- added French translation
- several css adjustments

MyKnowledgeBase version 1.5 - november 2014 
- several css adjustments

MyKnowledgeBase version 1.4 - october 2014 
- first stable release

