@@ -1,8 +1,7 @@
 /*
  * MOBILE NAVIGATION
- * Source: http://maxfoundry.com/blog/responsive-mobile-navigation-in-wordpress/
+ * Source: http://maxfoundry.com/articles/116/responsive-mobile-navigation-in-wordpress
  * Copyright author: John Hartley
- * Author URI: http://maxfoundry.com/blog/author/johnbhartley 
  * License: GNU General Public License v3 or later
  * License URI: http://www.gnu.org/licenses/gpl-3.0.html
  */
@@ -11,7 +10,7 @@ jQuery(document).ready(function() {
 	// build <select> dropdown
 	jQuery("<select />").appendTo("div.nav-head");
 
-	// create deafult option "Menu..."
+	// create option "Menu..."
 	jQuery("<option />", {
 		"selected": "selected",
 		"value": "",
