@@ -1,10 +1,10 @@
 /*
 Theme Name: MyKnowledgeBase
 Theme URI: http://www.guidovanderleest.nl/myknowledgebase
-Version: 2.1
+Version: 2.2
 Author: Guido van der Leest
 Author URI: http://www.guidovanderleest.nl
-Description: MyKnowledgeBase is a free, basic, clean, minimalistic, responsive, mobile friendly WordPress theme for a 3 or 4 column Knowledge Base, Bulletin Board, FAQ, Wiki or Weblink Portal. It uses the default WP categories and posts. Please check readme file how to set up such a website. Default theme language is English but Dutch, German, Spanish and French are supported too. Primary sidebar, homepage sidebar, 3 widget-area's in footer, custom header-image, custom background, display logo or blogname and description, full width page-template and dropdown navigation are included. Besides this no theme settingspage, no fancy options, no slideshow, this one only has the basic options. Enjoy. 
+Description: MyKnowledgeBase is a free, basic, clean, minimalistic, responsive, mobile friendly WordPress theme for a 3 or 4 column Knowledge Base, Bulletin Board, FAQ, Wiki or link Portal. It uses the default WP categories and posts. Please check readme file how to set up such a website. Default theme language is English but Dutch, German, Spanish and French are supported too. Primary sidebar, homepage sidebar, 3 widget-area's in footer, custom header-image, custom background, display logo or blogname and description, full width page-template and dropdown navigation are included. Besides this no theme settingspage, no fancy options, no slideshow, this one only has the basic options. Enjoy. 
 Tags: one-column, two-columns, right-sidebar, fixed-layout, responsive-layout, full-width-template, custom-background, custom-header, custom-menu, featured-images, white, blue, light, gray, editor-style, translation-ready
 License: GNU General Public License v3 or later
 License URI: http://www.gnu.org/licenses/gpl-3.0.html
@@ -214,7 +214,6 @@ select {max-width:100%; -webkit-appearance:menulist; -moz-appearance:menulist;}
 /* PAGE */
 .page-title {padding:0 0 10px;}
 .pagelink {clear:both; margin:20px 0 10px;}
-.edit-link {display:block; clear:both; text-align:center; margin:10px 0; padding:5px; background:none; border:1px solid #eee;}
 
 
 /* POST */
@@ -226,10 +225,17 @@ select {max-width:100%; -webkit-appearance:menulist; -moz-appearance:menulist;}
 .more:after {content:''; display:block; clear:both;}
 a.readmore {float:right; padding:2px 10px; background:#08a0ff; color:#fff; text-decoration:none;}
 a.readmore:hover {background:#333; text-decoration:none;}
+
+
+/* POST NAV */
 .post-nav {display:block; clear:both;}
 .post-nav:after {content:''; display:block; clear:both;}
 .nav-prev {float:right; padding:5px 0;}
 .nav-next{float:left; padding:5px 0;}
+
+
+/* EDIT LINK */
+.edit-link {display:block; clear:both; text-align:center; margin:10px 0; padding:5px; background:none; border:1px solid #eee;}
 
 
 /* IMAGE AND VIDEO */
@@ -273,6 +279,13 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 #commentform label {padding:0 0 5px; display:block;}
 #commentform textarea, #commentform input {width:90%; padding:2px 5px;}
 #commentform input[type="submit"] {width:9em; padding:2px 5px;} 
+
+
+/* COMMENT NAV */
+.comment-nav {display:block; clear:both;}
+.comment-nav:after {content:''; display:block; clear:both;}
+.comment-prev {float:left; padding:5px 0;}
+.comment-next {float:right; padding:5px 0;}
 
 
 /* SIDEBAR AND WIDGETS */
